# inteligent_information_services_project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  build.ps1  build.sh  dataset.txt  evaluation_metrics.csv  evaluation_results_distilgpt2.json  evaluation_results_tiiuae_falcon-rw-1b.json  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.txt  task_list.md  test_results.txt
src/: fine_tuning.py  main.py  model_loader.py  model_starter.py  test_api.py  trash.py  trash_client.py  trash_test.py
src/routers/: example.py  model.py  predict.py
tests/: model_evaluator.py  ollama_results_falcon3_1b.json  ollama_results_llama3.2_1b.json  ollama_results_qwen2_1.5b.json  ollama_test.py  test_api.py  test_client.py  test_model.py  trash_test.py
